--- a/pulsar/group_vars/all.yml
+++ b/pulsar/group_vars/all.yml
@@ -14,4 +14,4 @@ galaxy_job_metrics_plugins:
   - type: hostname
 
 # temp password for RabbitMQ
-rabbitmq_password_galaxy_au: your_password
+vault_rabbitmq_password_vhost: XXX
