--- a/pulsar/group_vars/pulsarservers.yml
+++ b/pulsar/group_vars/pulsarservers.yml
@@ -31,7 +31,7 @@ pulsar_yaml_config:
   tool_dependency_dir: "{{ pulsar_dependencies_dir }}"
   # The following are the settings for the pulsar server to contact the message queue with related timeouts etc.
   #message_queue_url: "pyamqp://galaxy_au:{{ vault_rabbitmq_password_vhost }}@{{ galaxy_server_hostname }}:5671//pulsar/galaxy_au?ssl=1"
-  message_queue_url: "pyamqp://galaxy:{{ vault_rabbitmq_password_vhost }}@{{ galaxy_server_hostname }}:5671//pulsar/galaxy?ssl=1"
+  message_queue_url: "pyamqp://galaxy:{{ vault_rabbitmq_password_vhost }}@{{ galaxy_server_hostname }}:5671/galaxy?ssl=1"
 
   min_polling_interval: 0.5
   amqp_publish_retry: True
