--- a/pulsar/ansible.cfg
+++ b/pulsar/ansible.cfg
@@ -5,5 +5,7 @@ retry_files_enabled = false
 
 vault_password_file = .vault-password.txt
 
+roles_path = roles
+
 [ssh_connection]
 pipelining = true
