--- a/pulsar/group_vars/pulsarservers.yml
+++ b/pulsar/group_vars/pulsarservers.yml
@@ -1,7 +1,7 @@
 galaxy_server_hostname: "hyperion.cac.cornell.edu" # Important!!!
 # Put your Galaxy server's fully qualified domain name (FQDN) (or the FQDN of the RabbitMQ server) above.
 
-pulsar_root: /mnt/pulsar
+pulsar_root: /storage/group/bfp2/default/00_pughlab/pulsar
 
 pulsar_pip_install: true
 pulsar_pycurl_ssl_library: openssl
@@ -9,8 +9,8 @@ pulsar_systemd: true
 pulsar_systemd_runner: webless
 pulsar_systemd_environment: [ DRMAA_LIBRARY_PATH=/usr/local/lib/libdrmaa.so.1 ]
 
-pulsar_create_user: true
-pulsar_user: {name: pulsar, shell: /bin/bash}
+pulsar_create_user: false
+pulsar_user: {name: testUser, shell: /bin/bash}
 
 pulsar_optional_dependencies:
   - pyOpenSSL
@@ -32,7 +32,7 @@ pulsar_yaml_config:
   tool_dependency_dir: "{{ pulsar_dependencies_dir }}"
   # The following are the settings for the pulsar server to contact the message queue with related timeouts etc.
   #message_queue_url: "pyamqp://galaxy:{{ rabbitmq_users_password.galaxy }}@{{ galaxy_server_hostname }}:5671/galaxy?ssl=1"
-  message_queue_url: "pyamqp://galaxy:{{ rabbitmq_users_password.galaxy }}@{{ galaxy_server_hostname }}:5671//galaxy?ssl=1"
+  message_queue_url: "pyamqp://iupulsar:{{ rabbitmq_users_password.iupulsar }}@{{ galaxy_server_hostname }}:5671//galaxy?ssl=1"
 
   min_polling_interval: 0.5
   amqp_publish_retry: True
