--- a/pulsar/group_vars/pulsarservers.yml
+++ b/pulsar/group_vars/pulsarservers.yml
@@ -31,8 +31,10 @@ pulsar_yaml_config:
   persistence_directory: "{{ pulsar_persistence_dir }}"
   tool_dependency_dir: "{{ pulsar_dependencies_dir }}"
   # The following are the settings for the pulsar server to contact the message queue with related timeouts etc.
-  #message_queue_url: "pyamqp://galaxy:{{ rabbitmq_users_password.galaxy }}@{{ galaxy_server_hostname }}:5671/galaxy?ssl=1"
-  message_queue_url: "pyamqp://iupulsar:{{ rabbitmq_users_password.iupulsar }}@{{ galaxy_server_hostname }}:5671//galaxy?ssl=1"
+  # JS2 destination
+  message_queue_url: "pyamqp://galaxy_iu:{{ rabbitmq_users_password.iupulsar }}@{{ galaxy_server_hostname }}:5671//pulsar/galaxy_iu?ssl=1"
+  # PSU destination
+  #message_queue_url: "pyamqp://galaxy_psu:{{ rabbitmq_users_password.psupulsar }}@{{ galaxy_server_hostname }}:5671//pulsar/galaxy_psu?ssl=1"
 
   min_polling_interval: 0.5
   amqp_publish_retry: True
