initial draft of cvmfs-exec

--- a/pulsar/pulsar.yml
+++ b/pulsar/pulsar.yml
@@ -31,6 +31,7 @@
         state: disabled
   roles:
     #- galaxyproject.cvmfs
+    - galaxyproject.cvmfsexec
     - galaxyproject.pulsar
 #  post_tasks:
 #    - name: Disable firewalld service
