--- a/pulsar/group_vars/pulsarservers.yml
+++ b/pulsar/group_vars/pulsarservers.yml
@@ -12,6 +12,9 @@ pulsar_systemd_environment: [ DRMAA_LIBRARY_PATH=/usr/local/lib/libdrmaa.so.1 ]
 pulsar_create_user: false
 pulsar_user: {name: testUser, shell: /bin/bash}
 
+#_scratch_root: "/storage/home/cfp102/scratch/"
+_scratch_root: "/mnt/scratch/"
+
 pulsar_optional_dependencies:
   - pyOpenSSL
   # For remote transfers initiated on the Pulsar end rather than the Galaxy end
@@ -70,3 +73,25 @@ pulsar_yaml_config:
 # Pulsar should use the same job metrics plugins as Galaxy. This will automatically set `job_metrics_config_file` in
 # `pulsar_yaml_config` and create `{{ pulsar_config_dir }}/job_metrics_conf.yml`.
 pulsar_job_metrics_plugins: "{{ galaxy_job_metrics_plugins }}"
+
+cvmfsexec_files:
+  - src: files/pulsar/galaxyproject.org.pub
+    dest: /etc/cvmfs/keys/galaxyproject.org/galaxyproject.org.pub
+  - src: files/pulsar/data.galaxyproject.org.pub
+    dest: /etc/cvmfs/keys/galaxyproject.org/data.galaxyproject.org.pub
+  - content: |
+      CVMFS_SERVER_URL='http://cvmfs1-iu0.galaxyproject.org/cvmfs/@fqrn@;http://cvmfs1-psu0.galaxyproject.org/cvmfs/@fqrn@;http://cvmfs1-tacc0.galaxyproject.org/cvmfs/@fqrn@'
+      CVMFS_KEYS_DIR=/etc/cvmfs/keys/galaxyproject.org
+    dest: /etc/cvmfs/domain.d/galaxyproject.org.conf
+
+cvmfsexec_local_options:
+  - key: CVMFS_ALIEN_CACHE
+    value: "{{ _scratch_root }}/cvmfs-cache"
+  - key: CVMFS_QUOTA_LIMIT
+    value: "-1"
+  - key: CVMFS_SHARED_CACHE
+    value: "no"
+  - key: CVMFS_CLAIM_OWNERSHIP
+    value: "yes"
+  - key: CVMFS_HTTP_PROXY
+    value: DIRECT
