--- a/pulsar/group_vars/pulsarservers.yml
+++ b/pulsar/group_vars/pulsarservers.yml
@@ -14,6 +14,7 @@ pulsar_user: {name: testUser, shell: /bin/bash}
 
 #_scratch_root: "/storage/home/cfp102/scratch/"
 _scratch_root: "/mnt/scratch/"
+_cvmfsexec_cert_path: "/storage/group/bfp2/default/00_pughlab/pulsar/etc/cvmfs/keys"
 
 pulsar_optional_dependencies:
   - pyOpenSSL
@@ -74,15 +75,18 @@ pulsar_yaml_config:
 # `pulsar_yaml_config` and create `{{ pulsar_config_dir }}/job_metrics_conf.yml`.
 pulsar_job_metrics_plugins: "{{ galaxy_job_metrics_plugins }}"
 
+cvmfsexec_source: none
+cvmfsexec_url: https://github.com/natefoo/cvmfsexec/archive/refs/heads/untar-no-preserve-times.tar.gz
+
 cvmfsexec_files:
   - src: files/pulsar/galaxyproject.org.pub
-    dest: /etc/cvmfs/keys/galaxyproject.org/galaxyproject.org.pub
+    dest: "{{ _cvmfsexec_cert_path }}/galaxyproject.org/galaxyproject.org.pub"
   - src: files/pulsar/data.galaxyproject.org.pub
-    dest: /etc/cvmfs/keys/galaxyproject.org/data.galaxyproject.org.pub
+    dest: "{{ _cvmfsexec_cert_path }}/galaxyproject.org/data.galaxyproject.org.pub"
   - content: |
       CVMFS_SERVER_URL='http://cvmfs1-iu0.galaxyproject.org/cvmfs/@fqrn@;http://cvmfs1-psu0.galaxyproject.org/cvmfs/@fqrn@;http://cvmfs1-tacc0.galaxyproject.org/cvmfs/@fqrn@'
-      CVMFS_KEYS_DIR=/etc/cvmfs/keys/galaxyproject.org
-    dest: /etc/cvmfs/domain.d/galaxyproject.org.conf
+      CVMFS_KEYS_DIR="{{ _cvmfsexec_cert_path }}/galaxyproject.org"
+    dest: "{{ _cvmfsexec_cert_path }}/domain.d/galaxyproject.org.conf"
 
 cvmfsexec_local_options:
   - key: CVMFS_ALIEN_CACHE
