--- a/pulsar/requirements.yml
+++ b/pulsar/requirements.yml
@@ -1,8 +1,8 @@
-- src: galaxyproject.cvmfs
-  version: 0.2.21
+# SLURM as our DRM
+- src: galaxyproject.repos
+  version: 0.0.3
+- src: galaxyproject.slurm
+  version: 1.0.2
+# Pulsar
 - src: galaxyproject.pulsar
   version: 1.0.10
-- src: galaxyproject.slurm
-  version: 0.1.3
-#- src: galaxproject.cvmfsexec
-#  version: 1.1.1
