Patch pulsar role
Pulsar folder creation currently requires root. This allows a local user (svc account) to create and own the folders

--- a/pulsar/group_vars/pulsarservers.yml
+++ b/pulsar/group_vars/pulsarservers.yml
@@ -13,6 +13,8 @@ pulsar_systemd_environment: [ DRMAA_LIBRARY_PATH=/usr/local/lib/libdrmaa.so.1 ]
 pulsar_create_user: false
 # Set userID for service account
 pulsar_user: {name: other_5f6ad95074eb4e, shell: /bin/bash}
+pulsar_privsep_user: other_5f6ad95074eb4e
+pulsar_group: bfp2_collab
 
 pulsar_optional_dependencies:
   - pyOpenSSL
