--- a/pulsar/group_vars/pulsarservers.yml
+++ b/pulsar/group_vars/pulsarservers.yml
@@ -36,9 +36,9 @@ pulsar_yaml_config:
   tool_dependency_dir: "{{ pulsar_dependencies_dir }}"
   # The following are the settings for the pulsar server to contact the message queue with related timeouts etc.
   # # JS2 destination
-  # message_queue_url: "pyamqp://galaxy_iu:{{ rabbitmq_users_password.iupulsar }}@{{ galaxy_server_hostname }}:5671//pulsar/galaxy_iu?ssl=1"
+  message_queue_url: "pyamqp://galaxy_iu:{{ rabbitmq_users_password.iupulsar }}@{{ galaxy_server_hostname }}:5671//pulsar/galaxy_iu?ssl=1"
   # PSU destination
-  message_queue_url: "pyamqp://galaxy_psu:{{ rabbitmq_users_password.psupulsar }}@{{ galaxy_server_hostname }}:5671//pulsar/galaxy_psu?ssl=1"
+  # message_queue_url: "pyamqp://galaxy_psu:{{ rabbitmq_users_password.psupulsar }}@{{ galaxy_server_hostname }}:5671//pulsar/galaxy_psu?ssl=1"
 
   min_polling_interval: 0.5
   amqp_publish_retry: True
